concord_macros/tests/trybuild/fail/codegen/reserved_sse_unsupported.rs
use concord_macros::api;

api! {
    client ReservedSseUnsupportedApi { base "https://example.com" }

    GET Events
        path ["events"]
        -> Sse<String>
}

fn main() {}
